# captcha-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: dev-pr.yml  dev.yml
.run/: Unittests in captcha-service.run.xml
src/api_lambdas/: api_get_pingback_verification_token.py  api_post_pingback_event.py  api_post_report_bad_captcha.py  api_post_report_good_captcha.py  api_post_solve_captcha.py
src/lambdas/: __init__.py  _routes.py  api_add_pingback.py  api_get_pingback_verification_token.py  api_post_add_pingback.py  api_post_pingback_event.py  api_post_report_bad_captcha.py  api_post_report_good_captcha.py  api_post_solve_captcha.py  api_post_solve_captcha_id.py  api_public_event_handler.py  api_twocaptcha_get_verification.py  event_handler.py
src/layers/: backends.py  captcha.py  captcha_interface.py  captcha_service.py  const.py  containers.py  database.py  db_captcha.py  db_dynamo.py  db_interface.py  db_service.py  dynamodb_api.py  entities.py  events.py  exceptions.py  i_captcha.py  i_database.py  icaptcha.py  interfaces.py  logs.py  proxy.py  router.py  routing.py  secrets.py  testing.py  utils.py  webhooks.py
src/routes/: routing.py
tests/: const.py
tests/api_lambdas/: test_api_post_pingback_event.py
tests/lambdas/: test_api_add_pingback.py  test_api_get_pingback_verification_token.py  test_api_post_add_pingback.py  test_api_post_pingback_event.py  test_api_post_report_bad_captcha.py  test_api_post_report_good_captcha.py  test_api_post_solve_captcha.py  test_event_handler.py
tests/layers/: test_api_twocaptcha.py  test_entities.py  (+5 more)
(+31 files in other folders)
