[tool.poetry]
name = "captcha-service"
version = "0.1.1"
description = ""
authors = ["services <services@rydeas.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "~3.12"
py-aws-core = "~0.2"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
